--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eS">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/img/pelota1.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/img/pelota1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda Futbol</title>
   </head>
